# hostagent

./: .gitignore  pyproject.toml
.pip/: pip.conf
conf/: start_research_agent_api.sh
docs/tech/: research_facade.md
examples/research/: .env.example  init_langgraph.sh  langgraph.json  requirements.txt  research_agent.py  run_research_agent.py
src/client/: __init__.py  redis_client.py
src/deepagents/: audit_tool_node.py  graph.py  model.py  sub_agent.py  workspace_dir.py
src/deepagents/util/: agent_streamer.py  async_stream_preview.py  env_utils.py  handle_interactive_loop.py  handle_user_input.py  run_interactive_session.py
src/facade/: research_agent_api.py  research_agent_client_example.py
src/service/research_agent/: research_agent.py  research_agent_prompt.py  research_agent_tools.py
src/test/: hello_world.ipynb  learn_langgraph.py
src/test/integration/: redis_example_usage.py
